# local-llm-wiki

./: .dockerignore  .env.example  .gitignore  LICENSE  MVP0-B-团队契约确认.md  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  dev-requirements.txt  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_users_workspaces.py  002_add_model_profiles_and_constraints.py  003_add_sources_jobs_and_wiki.py
backend/app/: config.py  database.py  main.py  recover_jobs.py  seed.py
backend/app/api/: exports.py  health.py  jobs.py  model_profiles.py  sources.py  wiki.py  workspaces.py
backend/app/core/: __init__.py  errors.py
backend/app/ingest/: __init__.py  context.py  mock_planner.py  parser.py  pipeline.py  prompts.py  validation.py
backend/app/llm/: __init__.py  base.py  bootstrap.py  errors.py  factory.py  health.py  http.py  mock.py  security.py  types.py
backend/app/models/: __init__.py  base.py  content.py  model_profile.py  user.py
backend/app/repositories/: __init__.py  content.py  wiki.py  workspaces.py
backend/app/schemas/: __init__.py  content.py  exports.py  model_profile.py  wiki.py  workspace.py
backend/app/services/: content.py  credentials.py  exports.py  job_state.py  llm.py  mock_llm.py  model_profiles.py  storage.py  uploads.py  wiki.py
backend/app/worker/: __init__.py  __main__.py  config.py  health.py  jobs.py  runner.py
backend/tests/: test_llm_health_integration.py  test_llm_types.py  test_mock_llm.py  test_mvp0_c_integration.py  test_ollama_health.py  test_provider_factory.py  test_provider_mvp1.py  test_worker_redis_integration.py  test_worker_unit.py
backend/tests/fixtures/: aurora.md
backend/tests/integration/: test_mvp0_api.py  test_mvp1_b.py  (+2 more)
(+93 files in other folders)
