[project]
name = "local-llm-wiki-backend"
version = "0.1.0"
description = "LLM Wiki backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "redis>=5,<7",
    "rq>=2,<3",
    "httpx>=0.27,<1",
]

[project.scripts]
wiki-worker = "app.worker.runner:main"

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
markers = [
  "integration: requires an explicitly configured Redis test instance",
]
testpaths = ["tests"]
